<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:background="@color/orange_clair"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="TextView"
                android:textSize="24sp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="260dp"
                android:layout_height="30dp"

                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="59dp"
                android:layout_height="40dp"
                android:text="@string/tiptow"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_weight="0"
                android:background="#C8DC6F"
                android:ems="10"
                android:gravity="center"

                android:hint="Required Field"
                android:inputType="text"
                android:textColor="#AFAFAF"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editText3"
                android:layout_width="249dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="46dp"
                android:layout_weight="0"
                android:background="#C8DC6F"
                android:ems="10"
                android:gravity="center"

                android:hint="Required Field"
                android:inputType="text"
                android:textColor="#AFAFAF"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            >

            <Button
                android:id="@+id/button"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/calculate_tip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="107dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>